--- a/notebooks/01-process-data.ipynb
+++ b/notebooks/01-process-data.ipynb
@@ -20,16 +20,14 @@
   {
    "cell_type": "markdown",
    "id": "8ac9e15c-b114-4478-b0b8-965836c2c24e",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "fe56452b-8a32-44c8-a1d7-3c7f1738bd25",
    "metadata": {},
    "outputs": [],
@@ -53,39 +51,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "25aeade5-7a02-4385-81f9-28db39e3998f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DB_DIR = os.path.join('..', 'data', 'external', 'database.db')\n",
-    "SAVE_DIR = os.path.join('..', 'data', 'interim', 'version_01.csv')\n",
-    "RECORD_ID = 3\n",
-    "COLUMN_NAMES = ['transform_matrix', 'velocity', 'health_level', 'wreck_flag', 'brake_level', 'flaps_level', 'landed_level', 'target_name']\n",
-    "FINAL_FEATURES = "
+    "DB_DIR = os.path.join('..', 'data', 'external', 'v2_logs.db')\n",
+    "SAVE_DIR = os.path.join('..', 'data', 'interim', 'version_02.csv')\n",
+    "RECORD_ID = 5\n",
+    "COLUMN_NAMES = ['transform_matrix', 'velocity', 'health_level', 'wreck_flag', 'brake_level', 'flaps_level', 'landed_level', 'target_name']"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "a1bd87cb-dbaf-4325-8ef9-ef0332ba7da5",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Import Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "3238c34c-382e-422d-a7ae-8174175ddf72",
    "metadata": {},
    "outputs": [],
    "source": [
     "conn = sqlite3.connect(DB_DIR)\n",
-    "df_our = pd.read_sql_query(f'SELECT * FROM ally_1_machine_state WHERE id_rec = {RECORD_ID}', conn)\n",
-    "df_bandit = pd.read_sql_query(f'SELECT * FROM ennemy_1_machine_state WHERE id_rec = {RECORD_ID}', conn)\n",
+    "df_our = pd.read_sql_query(f'SELECT * FROM ally_1_machine_state WHERE id_rec >= {RECORD_ID}', conn)\n",
+    "df_bandit = pd.read_sql_query(f'SELECT * FROM ennemy_1_machine_state WHERE id_rec >= {RECORD_ID}', conn)\n",
     "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d0fb03fa-76ad-40fb-9df0-5f80686b859e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['-0.080891;0.012988;-0.996638;-4135.735840;-0.000001;0.999915;0.013031;512.866882;0.996723;0.001055;-0.080884;535.999634',\n",
+       " '-230.656006;10.493129;-22.567677',\n",
+       " '0.7929427291732906',\n",
+       " '',\n",
+       " '0',\n",
+       " '0',\n",
+       " '',\n",
+       " 'ennemy_1']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_our.iloc[-1].v.split(':')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3196c74a-a48e-4533-b90a-6f33f80e717e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['-0.080891;0.012988;-0.996638;-4124.717773;-0.000001;0.999915;0.013031;512.370544;0.996723;0.001055;-0.080884;537.078735',\n",
+       " '-230.264664;10.361356;-22.552729',\n",
+       " '0.7929427291732906',\n",
+       " '',\n",
+       " '0',\n",
+       " '0',\n",
+       " '',\n",
+       " 'ennemy_1']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_our.iloc[-2].v.split(':')"
    ]
   },
   {
@@ -106,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "c0cea40e-abbf-401c-91fa-620a7356116f",
    "metadata": {},
    "outputs": [],
@@ -145,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "84d6d8d9-cd76-47f2-842e-71ac8bea3060",
    "metadata": {},
    "outputs": [],
@@ -186,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "e99b35c4-93c1-4880-984f-b2938f61875f",
    "metadata": {},
    "outputs": [],
@@ -229,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "50601207-ce37-4acc-818d-e65ed287d377",
    "metadata": {},
    "outputs": [],
@@ -251,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "c8d45cbd-e77e-443a-9f26-f6e0338c5293",
    "metadata": {},
    "outputs": [],
@@ -271,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "f9bdbe02-cf02-4ff8-b35b-389369d09704",
    "metadata": {
     "scrolled": true
@@ -299,18 +350,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "ba6a5c60-9a7c-4756-a46d-ed4e8328c945",
    "metadata": {},
    "outputs": [],
    "source": [
-    "COLS_BANDIT_NOT_HAVE = ['health_level', 'brake_level', 'flaps_level', 'bandit_is_targetted']\n",
-    "\n",
     "df_0 = df_our.copy()\n",
     "df_0.loc[:, 'aircraft_id'] = 'ally_1'\n",
     "\n",
     "df_1 = df_bandit\\\n",
-    "    .drop(columns=COLS_BANDIT_NOT_HAVE)\\\n",
     "    .copy()\n",
     "\n",
     "df_2 = df_0.merge(\n",
@@ -327,7 +375,6 @@
     "df_3.loc[:, 'aircraft_id'] = 'ennemy_1'\n",
     "\n",
     "df_4 = df_our\\\n",
-    "    .drop(columns=COLS_BANDIT_NOT_HAVE)\\\n",
     "    .copy()\n",
     "\n",
     "df_5 = df_3.merge(\n",
@@ -350,6 +397,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "35e39b1e-c212-43ad-b600-941f4970f445",
+   "metadata": {},
+   "source": [
+    "## Exclude first 5 seconds and last 5 seconds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "55926d6e-4fd0-4a83-942f-844ef09bb1c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_0 = preprocessed_data.copy()\n",
+    "df_1 = df_0\\\n",
+    "    .groupby('id_rec')\\\n",
+    "    .agg(\n",
+    "        min_sec=pd.NamedAgg('c', 'min'),\n",
+    "        max_sec=pd.NamedAgg('c', 'max'))\n",
+    "\n",
+    "df_3 = pd.DataFrame()\n",
+    "for ix, srs in df_1.iterrows():\n",
+    "    min_sec = srs['min_sec']\n",
+    "    max_sec = srs['max_sec']\n",
+    "\n",
+    "    df_2 = df_0\\\n",
+    "        .query('id_rec == @ix')\\\n",
+    "        .query('c <= (@max_sec - 5)')\\\n",
+    "        .query('(@min_sec + 5) <= c')\\\n",
+    "        .copy()\n",
+    "\n",
+    "    df_3 = pd.concat([df_3, df_2], ignore_index=True)\n",
+    "\n",
+    "preprocessed_data = df_3.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0b3a3b25-2f2e-45b2-9e97-22ff7754c72e",
    "metadata": {},
    "source": [
@@ -358,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "f4153a4a-3ead-4a05-8277-0bd27b9f9f92",
    "metadata": {},
    "outputs": [],
@@ -393,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "67c0d7f8-cfda-42e1-b45e-0c5197904b50",
    "metadata": {},
    "outputs": [],
@@ -401,6 +486,27 @@
     "preprocessed_data.rename(\n",
     "    columns={'c': 'timestep', 'id_rec': 'record_id'},\n",
     "    inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caf089f8-f27f-4944-b9f8-2c03dafcfad8",
+   "metadata": {},
+   "source": [
+    "## Exclude unnessary columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "06711bae-f46d-4e21-a58b-a334a22d9a02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "COLS = ['health_level', 'brake_level', 'flaps_level', 'bandit_is_targetted']\n",
+    "\n",
+    "for col in COLS:\n",
+    "    preprocessed_data.drop(columns=[col, f'{col}_bandit'], inplace=True)"
    ]
   },
   {
@@ -413,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "315ae749-446f-4de1-bcc0-126e140eafcb",
    "metadata": {},
    "outputs": [],
