--- a/notebooks/02-prepare-training-data.ipynb
+++ b/notebooks/02-prepare-training-data.ipynb
@@ -44,27 +44,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "INPUT_DIR = os.path.join('..', 'data', 'interim', 'version_01.csv')\n",
+    "INPUT_DIR = os.path.join('..', 'data', 'interim', 'version_02.csv')\n",
     "SCALER_DIR = os.path.join('..', 'data', 'scalers')\n",
     "OUTPUT_DIR = os.path.join('..', 'data', 'processed')\n",
     "GROUPS = ['record_id', 'aircraft_id']\n",
     "ACTIONS_FEATURES = [\n",
     "    'transform_matrix_0', 'transform_matrix_1', 'transform_matrix_2',\n",
     "    'transform_matrix_4', 'transform_matrix_5', 'transform_matrix_6',\n",
-    "    'transform_matrix_8', 'transform_matrix_9', 'transform_matrix_10',\n",
-    "    'brake_level']\n",
+    "    'transform_matrix_8', 'transform_matrix_9', 'transform_matrix_10']\n",
     "TEST_RATIO = 0.30\n",
     "RANDOM_STATE = 42\n",
-    "LOOKBACK_LAG = 10\n",
-    "FORECAST_LAG = 3"
+    "LOOKBACK_LAG = 30\n",
+    "FORECAST_LAG = 7"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "83404c4a-2447-413a-8ed4-50c82768583e",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Import Data"
    ]
@@ -90,9 +87,7 @@
   {
    "cell_type": "markdown",
    "id": "e7dd18b0-ac67-4675-8e63-7e2fa91db490",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Calculate distances instead of positions"
    ]
@@ -104,36 +99,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dx = source.loc[:, 'transform_matrix_3'] - source.loc[:, 'transform_matrix_3_bandit']\n",
-    "dy = source.loc[:, 'transform_matrix_7'] - source.loc[:, 'transform_matrix_7_bandit']\n",
-    "dz = source.loc[:, 'transform_matrix_11'] - source.loc[:, 'transform_matrix_11_bandit']\n",
+    "# dx = source.loc[:, 'transform_matrix_3'] - source.loc[:, 'transform_matrix_3_bandit']\n",
+    "# dz = source.loc[:, 'transform_matrix_11'] - source.loc[:, 'transform_matrix_11_bandit']\n",
     "\n",
-    "source.loc[:, 'horizontal_distance'] = np.sqrt(dx**2 + dz**2)\n",
+    "# source.loc[:, 'horizontal_distance'] = np.sqrt(dx**2 + dz**2)\n",
     "\n",
-    "source.drop(\n",
-    "    columns=[\n",
-    "        'transform_matrix_3', 'transform_matrix_3_bandit',\n",
-    "        'transform_matrix_11', 'transform_matrix_11_bandit'],\n",
-    "    inplace=True)\n",
-    "\n",
+    "# source.drop(\n",
+    "#     columns=[\n",
+    "#         'transform_matrix_3', 'transform_matrix_3_bandit',\n",
+    "#         'transform_matrix_11', 'transform_matrix_11_bandit'],\n",
+    "#     inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f05dd45-bc2a-451e-be58-73ba8fbb5a56",
+   "metadata": {},
+   "source": [
+    "## Rename transform matrix fields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fb777baa-b721-40ba-9ebc-661f4a09b1b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "source.rename(\n",
-    "    columns={'transform_matrix_7': 'altitude', 'transform_matrix_7_bandit': 'altitude_bandit'},\n",
+    "    columns={\n",
+    "        'transform_matrix_3': 'cord_x', 'transform_matrix_3_bandit': 'cord_x_bandit',\n",
+    "        'transform_matrix_11': 'cord_z', 'transform_matrix_11_bandit': 'cord_z_bandit',\n",
+    "        'transform_matrix_7': 'cord_y', 'transform_matrix_7_bandit': 'cord_y_bandit'},\n",
     "    inplace=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "c628096e-5ab1-4ecd-9b76-e48c7dc10ca1",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Identify training and testing datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "52879b28-cf3a-4d09-9fc1-db902cb67aa4",
    "metadata": {},
    "outputs": [],
@@ -143,7 +154,7 @@
     "train = pd.DataFrame()\n",
     "test = pd.DataFrame()\n",
     "for name, df_0 in grouped:\n",
-    "    df_0_train, df_0_test = train_test_split(df_0, test_size=TEST_RATIO, random_state=RANDOM_STATE)\n",
+    "    df_0_train, df_0_test = train_test_split(df_0, test_size=TEST_RATIO, random_state=RANDOM_STATE, shuffle=False)\n",
     "    train = pd.concat([train, df_0_train], ignore_index=True)\n",
     "    test = pd.concat([test, df_0_test], ignore_index=True)"
    ]
@@ -151,16 +162,14 @@
   {
    "cell_type": "markdown",
    "id": "d10bb96e-f3b7-4f3b-ba67-b39e30b77c0a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Normalize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "f57a4a5b-1e54-447d-8708-7eb2b2d37b0b",
    "metadata": {},
    "outputs": [],
@@ -210,12 +219,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "471d1f69-2e5a-4c65-8392-99c5abbc23cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train, test = normalize_field_w_bandit(train, test, ['altitude'], 'altitude')\n",
+    "train, test = normalize_field_w_bandit(train, test, ['cord_y'], 'cord_y')\n",
+    "train, test = normalize_field_w_bandit(train, test, ['cord_x'], 'cord_x')\n",
+    "train, test = normalize_field_w_bandit(train, test, ['cord_z'], 'cord_z')\n",
     "train, test = normalize_field_w_bandit(train, test, ['velocity_x', 'velocity_y', 'velocity_z'], 'velocity')"
    ]
   },
@@ -229,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "2ad511b7-5fc4-4248-a6ca-c0d56d5bedb0",
    "metadata": {},
    "outputs": [],
@@ -285,8 +296,8 @@
     "        lb_state_our = get_lookback_lags(df=df_0, features=our_features)\n",
     "        lb_state_bandit = get_lookback_lags(df=df_0, features=bandit_features)\n",
     "    \n",
-    "        fc_state_our = get_forecast_lags(df=df_0, features=our_features)\n",
-    "        fc_state_bandit = get_forecast_lags(df=df_0, features=bandit_features)\n",
+    "        fc_state_our = get_forecast_lags(df=df_0, features=['cord_x', 'cord_y', 'cord_z'])\n",
+    "        fc_state_bandit = get_forecast_lags(df=df_0, features=['cord_x_bandit', 'cord_y_bandit', 'cord_z_bandit'])\n",
     "    \n",
     "        fc_action_our = get_forecast_lags(df=df_0, features=ACTIONS_FEATURES)\n",
     "    \n",
@@ -324,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "73d1e724-508c-4a57-8dac-ccd41417fe76",
    "metadata": {},
    "outputs": [],
@@ -343,51 +354,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "ce63ce90-5718-4560-8afc-fa8db0044781",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, ds in enumerate(['final_lb_state_our', 'final_lb_state_bandit', 'final_fc_action_our']):\n",
+    "for i, ds in enumerate(['lb_state_our', 'lb_state_bandit', 'fc_action_our']):\n",
     "    np.save(os.path.join(OUTPUT_DIR, f'train_{ds}.npy'), train_X[i])\n",
     "    np.save(os.path.join(OUTPUT_DIR, f'test_{ds}.npy'), test_X[i])\n",
     "\n",
-    "for i, ds in enumerate(['final_fc_state_our', 'final_fc_state_bandit']):\n",
+    "for i, ds in enumerate(['fc_state_our', 'fc_state_bandit']):\n",
     "    np.save(os.path.join(OUTPUT_DIR, f'train_{ds}.npy'), train_Y[i])\n",
     "    np.save(os.path.join(OUTPUT_DIR, f'test_{ds}.npy'), test_Y[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "3e1e1762-09e0-48df-9657-05c3a1f28479",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['aircraft_id', 'record_id', 'timestep', 'health_level', 'brake_level',\n",
-       "       'flaps_level', 'transform_matrix_0', 'transform_matrix_1',\n",
-       "       'transform_matrix_2', 'transform_matrix_4', 'transform_matrix_5',\n",
-       "       'transform_matrix_6', 'altitude', 'transform_matrix_8',\n",
-       "       'transform_matrix_9', 'transform_matrix_10', 'velocity_x', 'velocity_y',\n",
-       "       'velocity_z', 'bandit_is_targetted', 'transform_matrix_0_bandit',\n",
-       "       'transform_matrix_1_bandit', 'transform_matrix_2_bandit',\n",
-       "       'transform_matrix_4_bandit', 'transform_matrix_5_bandit',\n",
-       "       'transform_matrix_6_bandit', 'altitude_bandit',\n",
-       "       'transform_matrix_8_bandit', 'transform_matrix_9_bandit',\n",
-       "       'transform_matrix_10_bandit', 'velocity_x_bandit', 'velocity_y_bandit',\n",
-       "       'velocity_z_bandit', 'horizontal_distance'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.columns"
    ]
   }
  ],
