--- a/notebooks/02-prepare-training-data.ipynb
+++ b/notebooks/02-prepare-training-data.ipynb
@@ -48,14 +48,11 @@
     "SCALER_DIR = os.path.join('..', 'data', 'scalers')\n",
     "OUTPUT_DIR = os.path.join('..', 'data', 'processed')\n",
     "GROUPS = ['record_id', 'aircraft_id']\n",
-    "ACTIONS_FEATURES = [\n",
-    "    'transform_matrix_0', 'transform_matrix_1', 'transform_matrix_2',\n",
-    "    'transform_matrix_4', 'transform_matrix_5', 'transform_matrix_6',\n",
-    "    'transform_matrix_8', 'transform_matrix_9', 'transform_matrix_10']\n",
+    "ACTIONS_FEATURES = ['cord_x', 'cord_y', 'cord_z']\n",
     "TEST_RATIO = 0.30\n",
     "RANDOM_STATE = 42\n",
-    "LOOKBACK_LAG = 30\n",
-    "FORECAST_LAG = 7"
+    "LOOKBACK_LAG = 180\n",
+    "FORECAST_LAG = 60"
    ]
   },
   {
@@ -86,6 +83,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "02072b06-9b92-4bd2-8df6-86c460ffa6c9",
+   "metadata": {},
+   "source": [
+    "## Exclude enemy perspective"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9bcdfd70-7098-4c12-8c94-ca09685101c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source.query('aircraft_id == \"ally_1\"', inplace=True)\n",
+    "source.reset_index(drop=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e7dd18b0-ac67-4675-8e63-7e2fa91db490",
    "metadata": {},
    "source": [
@@ -94,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "fbaa9562-bfd4-4638-a70f-4c7071c1c488",
    "metadata": {},
    "outputs": [],
@@ -121,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "fb777baa-b721-40ba-9ebc-661f4a09b1b2",
    "metadata": {},
    "outputs": [],
@@ -144,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "52879b28-cf3a-4d09-9fc1-db902cb67aa4",
    "metadata": {},
    "outputs": [],
@@ -169,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f57a4a5b-1e54-447d-8708-7eb2b2d37b0b",
    "metadata": {},
    "outputs": [],
@@ -231,6 +247,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a29b42de-7b89-4a99-8e55-f556fecc906c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "ac6db511-462e-450c-9afe-a83213d9e338",
    "metadata": {},
@@ -240,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "2ad511b7-5fc4-4248-a6ca-c0d56d5bedb0",
    "metadata": {},
    "outputs": [],
@@ -335,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "73d1e724-508c-4a57-8dac-ccd41417fe76",
    "metadata": {},
    "outputs": [],
@@ -354,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ce63ce90-5718-4560-8afc-fa8db0044781",
    "metadata": {},
    "outputs": [],
