--- a/notebooks/03-train-model.ipynb
+++ b/notebooks/03-train-model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "534de7b4-17d6-40df-96b9-02ed625edcd7",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b5d58e42-6d9e-484f-98b0-9f3cedac7bac",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e698748b-20de-4063-ab36-a5fff8d24dc0",
    "metadata": {},
    "outputs": [],
@@ -78,53 +78,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8f707bf9-a145-4819-b1c9-8c2cd63c234b",
    "metadata": {},
    "outputs": [],
    "source": [
     "class CombatForecastDataset(Dataset):\n",
-    "    def __init__(self, path_lb_our, path_lb_bandit, path_fc_action, path_fc_our, path_fc_bandit, sos_value=9999.0):\n",
-    "        self.lb_our = np.load(path_lb_our)          # (N, 10, 18)\n",
-    "        self.lb_bandit = np.load(path_lb_bandit)    # (N, 10, 13)\n",
-    "        self.fc_action = np.load(path_fc_action)    # (N, 3, 10)\n",
-    "        self.fc_our = np.load(path_fc_our)          # (N, 3, 18)\n",
-    "        self.fc_bandit = np.load(path_fc_bandit)    # (N, 3, 13)\n",
-    "        self.sos_value = sos_value\n",
+    "    def __init__(self, path_lb_our, path_lb_bandit, path_fc_action, path_fc_our, path_fc_bandit):\n",
+    "        self.lb_our = np.load(path_lb_our)\n",
+    "        self.lb_bandit = np.load(path_lb_bandit)\n",
+    "        self.fc_action = np.load(path_fc_action)\n",
+    "        self.fc_our = np.load(path_fc_our)\n",
+    "        self.fc_bandit = np.load(path_fc_bandit)\n",
     "        self.nr_of_padding = self.lb_our.shape[-1] - self.lb_bandit.shape[-1]\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.lb_our)\n",
     "\n",
     "    def __getitem__(self, idx):\n",
-    "        lb_our = self.lb_our[idx]         # (10, 18)\n",
-    "        lb_bandit = self.lb_bandit[idx]   # (10, 13)\n",
+    "        lb_our = self.lb_our[idx]\n",
+    "        lb_bandit = self.lb_bandit[idx]\n",
     "    \n",
-    "        # Pad lb_bandit to (10, 18)\n",
-    "        pad_width = ((0, 0), (0, self.nr_of_padding))  # pad 5 columns (features) at the end\n",
+    "        pad_width = ((0, 0), (0, self.nr_of_padding))\n",
     "        lb_bandit_padded = np.pad(lb_bandit, pad_width=pad_width, mode='constant', constant_values=0)\n",
-    "    \n",
-    "        # Now both are (10, 18) → stack along time axis (axis=0)\n",
-    "        src = np.concatenate([lb_our, lb_bandit_padded], axis=0)  # (20, 18)\n",
-    "    \n",
+    "        src = np.concatenate([lb_our, lb_bandit_padded], axis=0)\n",
+    "        \n",
     "        # Decoder input\n",
-    "        tgt = self.fc_action[idx]  # (3, 10)\n",
-    "        sos = np.ones((1, tgt.shape[1])) * self.sos_value\n",
-    "        tgt_input = np.vstack([sos, tgt[:-1]])  # (3, 10)\n",
+    "        # tgt_input = self.fc_action[idx]\n",
+    "        dec_beg = self.lb_bandit[idx][[-1], [3, 7, 11]]\n",
+    "        tgt_input = self.fc_bandit[idx]\n",
+    "        tgt_input = np.vstack([dec_beg, tgt_input[:-1]])\n",
     "\n",
     "        # Target output\n",
-    "        tgt_output = np.concatenate([self.fc_our[idx], self.fc_bandit[idx]], axis=-1)  # (3, 31)\n",
+    "        tgt_output = self.fc_bandit[idx]\n",
     "    \n",
     "        return (\n",
-    "            torch.tensor(src, dtype=torch.float32),        # encoder input (20, 18)\n",
-    "            torch.tensor(tgt_input, dtype=torch.float32),  # decoder input (3, 10)\n",
-    "            torch.tensor(tgt_output, dtype=torch.float32)  # decoder target (3, 31)\n",
+    "            torch.tensor(src, dtype=torch.float32),\n",
+    "            torch.tensor(tgt_input, dtype=torch.float32),\n",
+    "            torch.tensor(tgt_output, dtype=torch.float32)\n",
     "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9912384c-ee65-4a1b-ae9e-c81c971c457b",
    "metadata": {},
    "outputs": [],
@@ -134,16 +131,14 @@
     "    os.path.join(INPUT_DIR, 'train_lb_state_bandit.npy'),\n",
     "    os.path.join(INPUT_DIR, 'train_fc_action_our.npy'),\n",
     "    os.path.join(INPUT_DIR, 'train_fc_state_our.npy'),\n",
-    "    os.path.join(INPUT_DIR, 'train_fc_state_bandit.npy'),\n",
-    "    sos_value=0)\n",
+    "    os.path.join(INPUT_DIR, 'train_fc_state_bandit.npy'))\n",
     "\n",
     "testing_dataset = CombatForecastDataset(\n",
     "    os.path.join(INPUT_DIR, 'test_lb_state_our.npy'),\n",
     "    os.path.join(INPUT_DIR, 'test_lb_state_bandit.npy'),\n",
     "    os.path.join(INPUT_DIR, 'test_fc_action_our.npy'),\n",
     "    os.path.join(INPUT_DIR, 'test_fc_state_our.npy'),\n",
-    "    os.path.join(INPUT_DIR, 'test_fc_state_bandit.npy'),\n",
-    "    sos_value=0)"
+    "    os.path.join(INPUT_DIR, 'test_fc_state_bandit.npy'))"
    ]
   },
   {
@@ -164,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "92c63c89-2a3e-4589-9b0c-b5cd32394eeb",
    "metadata": {},
    "outputs": [],
@@ -236,17 +231,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0c56869e-b5bc-41a3-a4b4-6c2bd56e7c9c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.11/site-packages/torch/nn/modules/transformer.py:382: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "train_data_loader = DataLoader(training_dataset, batch_size=128, shuffle=True)\n",
     "test_data_loader = DataLoader(testing_dataset, batch_size=128, shuffle=True)\n",
     "model = ForecastTransformer(\n",
     "    enc_input_dim=15,\n",
-    "    dec_input_dim=9,\n",
-    "    out_dim=6,\n",
+    "    dec_input_dim=3,\n",
+    "    out_dim=3,\n",
     "    d_model=256,\n",
     "    nhead=4,\n",
     "    num_encoder_layers=3,\n",
@@ -271,7 +275,260 @@
    "execution_count": null,
    "id": "91d2663a-78da-413e-a56b-914f1f93c472",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0% 1/1000 [00:35<9:44:46, 35.12s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Training Loss: 0.0892, Validation Loss: 0.0426\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0% 2/1000 [01:09<9:37:56, 34.75s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2, Training Loss: 0.0119, Validation Loss: 0.0069\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0% 3/1000 [01:48<10:07:38, 36.57s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3, Training Loss: 0.0036, Validation Loss: 0.0065\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0% 4/1000 [02:24<10:04:16, 36.40s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4, Training Loss: 0.0020, Validation Loss: 0.0064\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0% 5/1000 [03:01<10:07:03, 36.61s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5, Training Loss: 0.0013, Validation Loss: 0.0057\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1% 6/1000 [03:36<9:59:27, 36.18s/it] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6, Training Loss: 0.0011, Validation Loss: 0.0054\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1% 7/1000 [04:11<9:52:23, 35.79s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7, Training Loss: 0.0009, Validation Loss: 0.0041\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1% 8/1000 [04:46<9:45:50, 35.43s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8, Training Loss: 0.0007, Validation Loss: 0.0035\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1% 9/1000 [05:21<9:41:15, 35.19s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9, Training Loss: 0.0006, Validation Loss: 0.0029\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1% 10/1000 [05:55<9:38:07, 35.04s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10, Training Loss: 0.0006, Validation Loss: 0.0030\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1% 11/1000 [06:30<9:35:18, 34.90s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 11, Training Loss: 0.0005, Validation Loss: 0.0029\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1% 12/1000 [07:05<9:33:22, 34.82s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 12, Training Loss: 0.0005, Validation Loss: 0.0031\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1% 13/1000 [07:39<9:31:26, 34.74s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 13, Training Loss: 0.0004, Validation Loss: 0.0032\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1% 14/1000 [08:17<9:45:05, 35.60s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 14, Training Loss: 0.0004, Validation Loss: 0.0032\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  2% 15/1000 [08:52<9:44:04, 35.58s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 15, Training Loss: 0.0004, Validation Loss: 0.0033\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  2% 16/1000 [09:27<9:38:52, 35.30s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 16, Training Loss: 0.0004, Validation Loss: 0.0034\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  2% 17/1000 [10:01<9:34:36, 35.07s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 17, Training Loss: 0.0003, Validation Loss: 0.0036\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  2% 18/1000 [10:36<9:33:13, 35.02s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 18, Training Loss: 0.0003, Validation Loss: 0.0038\n"
+     ]
+    }
+   ],
    "source": [
     "patience = 10  # number of epochs without improvement before stopping\n",
     "best_val_loss = float('inf')  # initially, the best validation loss is infinite\n",
